[package]
name = "elstm"
version = "0.1.0"
authors = ["FlixCoder"]

[dependencies]
rand = "0.4.*"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"
rayon = "0.9.*"


[profile.dev]
opt-level = 3
lto = false
panic = "unwind"
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
debug = false
debug-assertions = false
